--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,14 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "joi": "^17.13.3",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "nodemon": "^3.1.4"
+    "mysql2": "^3.11.0",
+    "nodemon": "^3.1.4",
+    "sequelize": "^6.11.0"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
   }
 }
